Revision history for Hailo

{{$NEXT}}

    - Don't set EXLOCK on temporary files we create. This completely
      broke Hailo tests on platforms like FreeBSD which aren't as
      promiscuous as Linux about file locking.

    - Skip t/command/shell.t tests on FreeBSD and other platforms
      where IPC3::Run + FindBin don't play nice together.

    - Add more testing including a really basic test for DBIx::Class
      debugging (from the dbix-class branch) and making TAP output
      more verbose.

    - Run all the tests Hailo::Test runs internally for each engine
      one-by-one using the DBD::SQLite memory driver. This makes sure
      the internal tests don't depend on each other in odd ways.

0.29 2010-03-13 10:32:43

    - Remove Data::Random as a dependency. It fails the most tests of
      all the dists we depend on and we don't really need it for
      anything.

0.28 2010-03-13 10:05:57

    - Update README.pod which hadn't been bumped since 0.25

    - Fix example in Hailo.pm's SYNOPSIS that didn't work and add an
      example for a bare ->reply().

    - Fix some code perlcritic whined about.

0.27 2010-03-13 09:41:46

    - Stop depending on Term::ReadLine::Gnu and use Term::ReadLine
      instead. I tested Term::ReadLine once and found that it was
      really bad (no history, C-p, C-n etc.) but now with
      PERL_RL='Perl o=0' everything's magically awesome in it.

      Term::ReadLine::Gnu was the #1 cause of our test failures so
      it's good not to depend on it.

      Also only set PERL_RL if it isn't set already.

0.26 2010-03-13 08:04:32

    - Split the X::Getopt parts of Hailo into Hailo::Command. This way
      the speed / memory penalty of loading all the command-line
      related modules is only applicable if running the command-line
      interface. using Hailo takes 1MB less memory now and loads a
      total of 56 modules instead of 74.

    - Due to the split it was possible to rename the `brain_resource'