@@ -47,6 +47,7 @@ Module::Pluggable         = 3.9
 
 ; Command.pm
 Getopt::Long::Descriptive = 0.083
+Dir::Self                 = 0.10
 
 ; ReadLine.pm
 Term::ProgressBar         = 2.00
